force-app/main/default/objects/Interview__c/fields/Candidate_Present__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate Present?</label>
    <type>Checkbox</type>
</CustomField>