force-app/main/default/objects/Interview__c/fields/Interview_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Interview_Feedback__c</fullName>
    <label>Interview Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>